--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -231,3 +231,24 @@ tbody tr:nth-child(odd) {background-color: #f9f9f9;} */
 }
 
 @page {size: auto;}
+
+.curso-chip {
+  align-items: center;
+  vertical-align: middle;
+  white-space: nowrap;
+
+  font-size: 0.8em;
+  line-height: 1.0;
+  padding-bottom: 2px;
+  border-radius: 3px;
+
+  color: #ffffffff;
+  background: #d7e2f9ff;
+  filter: brightness(0.9);
+  box-shadow: 0 0 0 0 rgba(0,0,0,0);
+  transition: box-shadow .15s ease, filter .15s ease, background-color .15s ease, border-color .15s ease;
+}
+.curso-chip:hover,
+.curso-chip:focus {
+  box-shadow: 0 1px 8px rgba(16,58,126,.18);
+}
