--- a/professores/templates/professores/dinamicas_view.html
+++ b/professores/templates/professores/dinamicas_view.html
@@ -164,19 +164,19 @@
               <option {% if not encontro %}selected{% endif %} value="0"> -- selecione o facilitador -- </option>
               <optgroup label="Professores">
                 {% for pessoa in professores %}
-                  <option value="{{pessoa.id}}" {% if pessoa.id == encontro.facilitador.id %} selected {% endif %}>{{pessoa.get_full_name}}</option>
+                  <option value="{{pessoa.id}}" {% if pessoa.id == encontro.facilitador.id %} selected {% endif %}>{{pessoa.get_full_name}} (Professor)</option>
                 {% endfor %}
               </optgroup>
               <optgroup label="Falconi">
                 {% for pessoa in falconis %}
-                  <option value="{{pessoa.id}}" {% if pessoa.id == encontro.facilitador.id %} selected {% endif %}>{{pessoa.get_full_name}}</option>
+                  <option value="{{pessoa.id}}" {% if pessoa.id == encontro.facilitador.id %} selected {% endif %}>{{pessoa.get_full_name}} (Falconi)</option>
                 {% endfor %}
               </optgroup>
-              {% comment %} <optgroup label="Outros">
-                {% for pessoa in pessoas %}
-                  <option value="{{pessoa.id}}" {% if pessoa.id == encontro.facilitador.id %} selected {% endif %}>{{pessoa}}</option>
+              <optgroup label="Outros Parceiros">
+                {% for pessoa in parceiros %}
+                  <option value="{{pessoa.id}}" {% if pessoa.id == encontro.facilitador.id %} selected {% endif %}>{{pessoa.get_full_name}} ({{pessoa.parceiro.organizacao.sigla}})</option>
                 {% endfor %}
-              </optgroup> {% endcomment %}
+              </optgroup>
           </select>
         </div>
 
