--- a/templates/participantes.html
+++ b/templates/participantes.html
@@ -66,10 +66,14 @@
       <thead>
         <tr>
           <th scope="col">{% lng "Nome" "Name" %}</th>
-          <th scope="col">{% lng "Não Convocado" "Not Invited" %}</th>
+          {% if user.eh_admin or nao_convocado %}
+            <th scope="col">{% lng "Não Convocado" "Not Invited" %}</th>
+          {% endif %}
           <th scope="col">{% lng "Presente" "Present" %}</th>
           <th scope="col">{% lng "Faltou" "Absent" %}</th>
-          <th scope="col">{% lng "Falta Justificada" "Justified Absence" %}</th>
+          {% if user.eh_admin %}
+            <th scope="col">{% lng "Falta Justificada" "Justified Absence" %}</th>
+          {% endif %}
         </tr>
       </thead>
       <tbody>
@@ -92,10 +96,12 @@
                   {% endif %};
                 ">
               <td>{{ envolvido.participante.get_full_name }}</td>
-              <td>
-                <input type="radio" name="envolvido_{{projeto_id}}_{{ envolvido.participante.id }}" value="0" class="ptravar"
-                  {% if envolvido.situacao == 0 %}checked{% endif %}>
-              </td>
+              {% if user.eh_admin or nao_convocado %}
+                <td>
+                  <input type="radio" name="envolvido_{{projeto_id}}_{{ envolvido.participante.id }}" value="0" class="ptravar"
+                    {% if envolvido.situacao == 0 %}checked{% endif %}>
+                </td>
+              {% endif %}
               <td>
                 <input type="radio" name="envolvido_{{projeto_id}}_{{ envolvido.participante.id }}" value="1" class="ptravar"
                   {% if envolvido.situacao == 1 %}checked{% endif %}>
@@ -104,10 +110,12 @@
                 <input type="radio" name="envolvido_{{projeto_id}}_{{ envolvido.participante.id }}" value="2" class="ptravar"
                   {% if envolvido.situacao == 2 %}checked{% endif %}>
               </td>
-              <td>
-                <input type="radio" name="envolvido_{{projeto_id}}_{{ envolvido.participante.id }}" value="3" class="ptravar"
-                  {% if envolvido.situacao == 3 %}checked{% endif %}>
-              </td>
+              {% if user.eh_admin %}
+                <td>
+                  <input type="radio" name="envolvido_{{projeto_id}}_{{ envolvido.participante.id }}" value="3" class="ptravar"
+                    {% if envolvido.situacao == 3 %}checked{% endif %}>
+                </td>
+              {% endif %}
             </tr>
           {% endfor %}
         {% endfor %}
