--- a/operacional/templates/operacional/operacional.html
+++ b/operacional/templates/operacional/operacional.html
@@ -39,6 +39,9 @@
 </a></div>
 <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'dinamicas_lista' %}">
   {% lng "Mentorias" "Mentorships" %}
+  <a href="{% url 'dinamicas_tabela_agenda' %}">
+    {% lng "(tabela)" "(table)" %}
+  </a>
 </a></div>
 <div class="item_lista"><span class="circulo">&#9899;</span> <a href="{% url 'despesas' %}">
   {% lng "Despesas" "Expenses" %}
