--- a/templates/calendario_dinamicas.html
+++ b/templates/calendario_dinamicas.html
@@ -142,6 +142,26 @@
                 className: {% if encontro.projeto %}" m_agendada"{% else %}" m_n_agendada"{% endif %},
             },
           {% endfor %}
+          {% for dias in dias_fundos %} 
+              {
+                {% with start=dias.startDate %}
+                  start: '{{start.year}}-{{start.month|stringformat:"02d"}}-{{start.day|stringformat:"02d"}}',
+                {% endwith %}
+                {% with end=dias.endDate|dias:1 %}
+                  end: '{{end.year}}-{{end.month|stringformat:"02d"}}-{{end.day|stringformat:"02d"}}',
+                {% endwith %}
+                rendering: "background",
+
+                {% if dias.tipo_evento.sigla == "FERI" %} // Feriado
+                  color: '#333333',
+                  description: "<b>feriado</b>",
+                {% else %}
+                  color: '#777777',
+                {% endif %}
+
+              },
+            {% endfor %}
+
         ],
         
         eventClick: function(event, jsEvent, view) {
