--- a/templates/prioridades.html
+++ b/templates/prioridades.html
@@ -9,6 +9,7 @@
 <div class="card card-recomendadas shadow-sm mb-4" style="max-width: 800px;">
   <div class="card-header text-white">
     <h5 class="mb-0" style="font-size: 1rem;">
+      <i class="fas fa-chart-line mr-2"></i>
       {% lng "Procura da Proposta" "Proposal Demand" %}
     </h5>
   </div>
