--- a/templates/prioridades.html
+++ b/templates/prioridades.html
@@ -6,7 +6,7 @@
 
 {% load linguas %}
 
-<div class="card card-recomendadas shadow-sm mb-4" style="max-width: 800px;">
+<div class="card card-recomendadas shadow-sm mb-4" >
   <div class="card-header text-white">
     <h5 class="mb-0" style="font-size: 1rem;">
       <i class="fas fa-chart-line mr-2"></i>
