melhor apresentação para mostrar outros horário de bancas

--- a/professores/templates/professores/bancas_lista.html
+++ b/professores/templates/professores/bancas_lista.html
@@ -16,6 +16,14 @@
 
 {% block content %}
 
+
+    <small><b style="
+      border: 2px solid #ccc;
+      padding: 3px;
+      border-radius: 6px;
+      background-color: #e8e9ea;
+      ">18/11 00:00 às 02:00</b></small>
+
   {% include "edicoes.html" with com_proximas=True com_tipo_banca=True %}
   {% include "informacoes_ml.html" %}<br>
   
