--- a/propostas/templates/propostas/proposta_detalhes.html
+++ b/propostas/templates/propostas/proposta_detalhes.html
@@ -13,6 +13,7 @@
   {% comment %} Para o gráfico no final da página {% endcomment %}
   <script src="{% static 'js/Chart.min.js' %}"></script>
   <script src="{% static 'js/chartjs-plugin-datalabels.js' %}"></script>
+  <link rel="stylesheet" href="{% static 'css/div_arrend.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'css/Chart.min.css' %}">
     
   <style>
@@ -27,26 +28,31 @@
 
 {% block content %}
 
-  {% include "proposta.html" %}
-  {% include "organizacao.html" %}
-  {% include "recomendadas.html" %}
-  {% include "perfil_estudantes.html" %}
-  {% include "prioridades.html" %}
+  <div class="div_arredondado">
+    {% include "proposta.html" %}
+    <hr>
+    {% include "organizacao.html" %}
+    <hr>
+    {% include "recomendadas.html" %}
+    {% include "perfil_estudantes.html" %}
+    {% include "prioridades.html" %}
 
-  {% if proposta.autorizado %}
-    <hr><br>
-    <b><label for="autorizador">
-      {% lng "Membro do comitê do Capstone responsável pela proposta" "Capstone committee member responsible for the proposal" %}
-    </label></b>:
-    <span id="autorizador">
-      {{ proposta.autorizado.get_full_name }}
-      <a href="mailto:{{proposta.autorizado.email}}"> &lt;{{proposta.autorizado.email}}&gt;</a>
-    </span><br>
-    <small class="lh-1">
-      {% lng "Obs: O responsável da proposta não necessariamente será o orientador do projeto, e muitas vezes não é. Use esse contato para tirar dúvidas da proposta. Perceba também que o responsável pode demorar para responder suas dúvidas. Não espere respostas imediatas, pois não as terá." "Note: The proposal manager will not necessarily be the project advisor, and often is not. Use this contact to ask questions about the proposal. Also note that the manager may take a while to respond to your questions. Do not expect immediate answers, as you will not have them." %}
-    </small>
-  {% endif %}
 
-  {% include "forum_perguntas.html" %}
+    {% if proposta.autorizado %}
+      <hr><br>
+      <b><label for="autorizador">
+        {% lng "Membro do comitê do Capstone responsável pela proposta" "Capstone committee member responsible for the proposal" %}
+      </label></b>:
+      <span id="autorizador">
+        {{ proposta.autorizado.get_full_name }}
+        <a href="mailto:{{proposta.autorizado.email}}"> &lt;{{proposta.autorizado.email}}&gt;</a>
+      </span><br>
+      <small class="lh-1">
+        {% lng "Obs: O responsável da proposta não necessariamente será o orientador do projeto, e muitas vezes não é. Use esse contato para tirar dúvidas da proposta. Perceba também que o responsável pode demorar para responder suas dúvidas. Não espere respostas imediatas, pois não as terá." "Note: The proposal manager will not necessarily be the project advisor, and often is not. Use this contact to ask questions about the proposal. Also note that the manager may take a while to respond to your questions. Do not expect immediate answers, as you will not have them." %}
+      </small>
+    {% endif %}
+
+    {% include "forum_perguntas.html" %}
+  </div>
 
 {% endblock %}
