cards com largura de 700

--- a/propostas/templates/propostas/proposta_completa.html
+++ b/propostas/templates/propostas/proposta_completa.html
@@ -123,6 +123,7 @@
 
   .card {
     width: 700px;
+    max-width: 100%;
     padding: 0 !important;
   }
 
@@ -133,7 +134,8 @@
   .card-analise {
     border-radius: 8px;
     border: none;
-    max-width: 700px;
+    width: 700px;
+    max-width: 100%;
   }
   
   .card-analise .card-header {
@@ -203,7 +205,8 @@
    .card-disponibilizar {
     border-radius: 8px;
     border: none;
-    max-width: 700px;
+    width: 700px;
+    max-width: 100%;
   }
   
   .card-disponibilizar .card-header {
