--- a/templates/conformidade.html
+++ b/templates/conformidade.html
@@ -12,7 +12,8 @@
   .card-conformidade {
     border-radius: 8px;
     border: none;
-    max-width: 700px;
+    width: 700px;
+    max-width: 100%;
   }
   
   .card-conformidade .card-header {
@@ -68,8 +69,6 @@
     transform: scale(1.2);
   }
 </style>
-
-
 
 
 <div class="card card-conformidade shadow-sm mb-4">
