--- a/templates/areas.html
+++ b/templates/areas.html
@@ -33,7 +33,8 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 1rem;
     border: none;
-    max-width: 700px;
+    width: 700px;
+    max-width: 100%;
   }
 
   .card-header {
